--- a/views/index.pug
+++ b/views/index.pug
@@ -1,10 +1,12 @@
 include ../partials/header.pug
 h1 Qui prend quoi ?
 h2 Creer un evenement
-form(method="post" action="/party")
-  div
+form(method="post" action="/party").newParty
+  div.newParty__fields
     label(for="name") Nom de l'evenement
     input(name="name" id="name" required minlength="3" placeholder="Nouvel an")
+    label(for="name") Organisateur
     input(name="author" id="author" required placeholder="Auteur")
-    input(name="date" id="date" placeholder="Date")
+    label(for="name") Date de l'evenement
+    input(type="date" name="date" id="date" placeholder="Date")
   button(type="submit") Creer
