--- a/partials/header.pug
+++ b/partials/header.pug
@@ -5,5 +5,16 @@ html(lang="fr")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet" href="/style.css")
+    link(rel="manifest" href="/manifest.json")
     script(src="/script.js" async)
   body
+
+  script.
+    if(navigator.serviceWorker) {
+      navigator.serviceWorker.register("/sw.js")
+      .then(() => console.log('Service worker is registered'))
+      .catch(err => console.warn(err))
+    }
+    else {
+      console.log('Nothing to see here...');
+    }
