-Fix try for Deploy on heroku - Add Bootstrap

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,4 +9,4 @@ form(method="post" action="/party").newParty
     input(name="author" id="author" required placeholder="Auteur")
     label(for="name") Date de l'evenement
     input(type="date" name="date" id="date" placeholder="Date")
-  button(type="submit") Creer
+  button(type="submit" class="btn btn-primary") Creer
