--- a/views/party.pug
+++ b/views/party.pug
@@ -18,7 +18,7 @@ div(class="party_details")
       input(name="name" id="name" required placeholder="chips")
       label(for="user") Invité
       input(name="user" id="user" required placeholder="Jean")
-    button(type="submit") Ajouter
+    button(type="submit" class="btn btn-primary") Ajouter
 
   input(id="url" class="share_button" value=`${url}` data-clipboard=`${url}` data-share-url=`${url}` 
         data-share-title=`${party.name}` data-share-text=`${party.author} vous invites a rejoindre l'événement ${party.name}`)
