-Add Bootstrap via npm -Add turbolinks

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,19 +5,9 @@
 $primary-color: #BAE5E5;
 $secondary-color: #98D6EA;
 
-h1 {
-  font-size: 40px;
-  font-weight: bold;
-}
-
-h2,h3 {
-  font-size: 25px;
-}
-
 body {
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 18px;
-  background-color: $primary-color;
+  font-size: 18px !important;
+  background-color: $primary-color !important;
 
   .share_button {
     display: none;
