--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,25 +1,32 @@
 @import 'vendors/reset.scss';
 @import 'config/medias.scss';
 @import 'blocs/newParty.scss';
+@import 'node_modules/bootstrap/scss/bootstrap.scss';
 
 $primary-color: #BAE5E5;
 $secondary-color: #98D6EA;
 
 body {
-  font-size: 18px !important;
-  background-color: $primary-color !important;
-
+  background-color: $primary-color;
   .share_button {
     display: none;
   }
   .party_details {
-    padding: 40px;
+    padding: 20px;
     background-color: $secondary-color;
     box-shadow: 0 6px 20px $secondary-color;
-    line-height: 2;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    margin-top: 10%;
+    .list-group {
+      .list-group-item {
+        background-color: transparent !important;
+        border: none !important;
+        form {
+          display: inline-block;
+        }
+      }
+    }
+  }
+  .alert {
+    z-index: 1;
   }
 }
