-Better Fetch - Finish the articl in README.md - Try to use turbolinks

--- a/partials/header.pug
+++ b/partials/header.pug
@@ -20,3 +20,5 @@ html(lang="fr")
     else {
       console.log('Nothing to see here...');
     }
+    //- var Turbolinks = require('turbolinks');
+    //- Turbolinks.start()
